--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icon": "^1.0.0",
     "react-icons": "^4.3.1",
+    "react-particle-effect-button": "^1.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
+    "swiper": "^6.8.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
