--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-icon": "^1.0.0",
     "react-icons": "^4.3.1",
     "react-particle-effect-button": "^1.0.1",
