--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "swiper": "^6.8.4",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "set port=4353 && react-scripts start",
