--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     ]
   },
   "devDependencies": {
-    "persian-date": "^1.1.0"
+    "persian-date": "^1.1.0",
+    "tailwindcss": "^3.0.24"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
